[package]
name = "minetest-protocol-derive"
version = "0.1.3"
edition = "2021"
authors = ["paradust"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/paradust7/minetest-rs"
description = "Derive macros for minetest-protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
syn = {version="1.0.107",features=["full", "fold"]}
quote = "1.0.23"
