[package]
name = "minetest-shark"
version = "0.1.3"
edition = "2021"
authors = ["paradust"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/paradust7/minetest-rs"
description = "Minetest proxy with detailed inspection of protocol"
keywords = ["minetest", "proxy", "shark"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mtshark"
path = "src/main.rs"
test = false
bench = false

[dependencies]
minetest-protocol = { version = "0.1.3", path = "../minetest-protocol" }
anyhow = { version = "1.0.69", features = ["backtrace"] }
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
